tests/wormhole/sfpi/gold/warn.txt
warn.cc: In function 'void setccnotinsidepushpop()':
warn.cc:70:5: error: '__builtin_riscv_sfpsetcc_v' was not declared in this scope; did you mean '__builtin_rvtt_wh_sfpsetcc_v'?
   70 |     __builtin_riscv_sfpsetcc_v(a, 12);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |     __builtin_rvtt_wh_sfpsetcc_v
